# agent-fetch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
crates/agent-fetch/: Cargo.toml
crates/agent-fetch-js/: Cargo.toml  README.md  package-lock.json  package.json
crates/agent-fetch-js/__test__/: basic.spec.ts
crates/agent-fetch-js/npm/darwin-arm64/: README.md  package.json
crates/agent-fetch-js/npm/darwin-x64/: README.md  package.json
crates/agent-fetch-js/npm/linux-arm64-gnu/: README.md  package.json
crates/agent-fetch-js/npm/linux-x64-gnu/: README.md  package.json
crates/agent-fetch-js/npm/linux-x64-musl/: README.md  package.json
crates/agent-fetch-js/npm/win32-x64-msvc/: README.md  package.json
crates/agent-fetch-js/src/: lib.rs
crates/agent-fetch/src/: client.rs  error.rs  ip_check.rs  lib.rs  policy.rs  rate_limit.rs  url_check.rs
crates/agent-fetch/tests/: integration.rs
crates/safe-fetch/: Cargo.toml
crates/safe-fetch-js/: Cargo.toml  package-lock.json  package.json
crates/safe-fetch-js/src/: lib.rs
crates/safe-fetch/src/: dns.rs
crates/safe-fetch/tests/: integration.rs
