[package]
name = "agent-fetch"
version = "0.1.10"
edition = "2021"
description = "A sandboxed HTTP client for AI agents with SSRF protection, domain policies, rate limiting, and resource controls"
license = "MIT"
repository = "https://github.com/Parassharmaa/agent-fetch"
readme = "../../README.md"
keywords = ["http", "security", "ssrf", "ai-agent", "sandbox"]
categories = ["web-programming::http-client", "network-programming"]

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "hickory-dns"] }
hickory-resolver = "0.25"
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
http = "1"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
